apps/database/authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-martin-to-db
  namespace: jku-cloud-computing
spec:
  selector:
    matchLabels:
      cnpg.io/cluster: postgresql
  action: ALLOW
  rules:
  - from:
    - source:
        matchLabels:
          app: martin-server
    to:
    - operation:
        ports: ["5432"]
  action: DENY
  rules:
  - to: []
